# EdgeVision-Agent

./: CMakeLists.txt  README.md  build_and_run.sh  main.cpp
agent/: Skill.h  SkillManager.h
agent/actions/: CaptureSkill.h
core/ipc/: SafeQueue.h
core/memory/: MemoryPool.h
core/thread/: ThreadPool.h
hardware/rknpu_infer/: RKNNEngine.cpp  RKNNEngine.h  Yolov5PostProcess.h
hardware/v4l2_camera/: V4L2Camera.cpp  V4L2Camera.h
